--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
